Update Login page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My First Webpage</title>
+    <title>Login page</title>
     <link rel="stylesheet" type="text/css" href="css/login.css" />
   </head>
   <body>
