--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Login page</title>
     <link rel="stylesheet" type="text/css" href="css/login.css" />
+    <script src="/login.js"></script>
   </head>
   <body>
     <div class="login-page">
@@ -40,11 +41,21 @@
       <div class="content">
         <div class="email">
           <div class="email-label">Email</div>
-          <input type="text" placeholder="Email" />
+          <input
+            type="text"
+            placeholder="Email"
+            id="Email"
+            oninput="validateEmail(this)"
+          />
         </div>
         <div class="password">
           <div class="password-label">Password</div>
-          <input type="text" placeholder="Password" />
+          <input
+            type="text"
+            placeholder="Password"
+            id="Password"
+            oninput="validatePassword(this)"
+          />
         </div>
 
         <div class="forgot">
@@ -61,7 +72,38 @@
         <div class="button">
           <button>Login</button>
         </div>
+
+        <div class="error">
+          <div id="emailError"></div>
+          <div id="passwordError"></div>
+        </div>
       </div>
     </div>
+
+    <!-- <script>
+      function validateEmail(input) {
+        var email = input.value.trim();
+        var emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+        var emailError = document.getElementById("emailError");
+
+        if (!emailPattern.test(email)) {
+          emailError.textContent = "Please enter a valid email address";
+        } else {
+          emailError.textContent = "";
+        }
+      }
+
+      function validatePassword(input) {
+        var password = input.value.trim();
+        var passwordError = document.getElementById("passwordError");
+
+        if (password.length < 8) {
+          passwordError.textContent =
+            "Password must be at least 8 characters long";
+        } else {
+          passwordError.textContent = "";
+        }
+      }
+    </script> -->
   </body>
 </html>
